syntax = "proto3";

import "cow_service.proto";

option java_package = "sep3.wayofmilk.grpc";
option java_multiple_files = true;
option csharp_namespace = "Sep3.WayOfMilk.Grpc";

// =========================
//   DEPARTMENT SERVICE
// =========================

service DepartmentService {
  rpc GetAllDepartments (Empty) returns (DepartmentList);
  rpc AddDepartment (DepartmentCreationRequest) returns (DepartmentData);
  rpc GetDepartmentById (DepartmentIdRequest) returns (DepartmentData);
  rpc GetDepartmentByType (DepartmentTypeRequest) returns (DepartmentData);
}

// =========================
//         MESSAGES
// =========================

message DepartmentList {
  repeated DepartmentData departments = 1;
}

message DepartmentCreationRequest {
  string type = 1; // QUARANTINE, MILKING etc.
}

message DepartmentData {
  int64 id = 1;
  string type = 2; // ENUM -> represented as string
}

message DepartmentIdRequest {
  int64 id = 1;
}

message DepartmentTypeRequest {
  string type = 1; // QUARANTINE, MILKING etc.
}
