
syntax = "proto3";
import "repeatingMessageTypes.proto";

option java_package = "sep3.wayofmilk.grpc";
option java_multiple_files = true;
option csharp_namespace = "Sep3.WayOfMilk.Grpc";

service UserService {
  rpc GetAllUsers (Empty) returns (UserList);
  rpc AddUser (UserCreationRequest) returns (UserData);
  rpc UpdateUser (UserData) returns (UserData);
  rpc GetUserById (UserIdRequest) returns (UserData);
  rpc DeleteUser (UserIdRequest) returns (Empty);
  rpc GetUsersByName (NameRequest) returns (UserList);
  rpc AuthenticateUser (AuthenticationRequest) returns (UserData);
}

message UserList {
  repeated UserData users = 1;
}
message UserCreationRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  string password = 5;
  string role = 6; // ADMIN, FARMER etc.
  string licenseNumber = 7;
}
message UserData {
  int64 id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string address = 4;
  optional string phone = 5;
  optional string role = 6; // ADMIN, FARMER etc.
  optional string licenseNumber = 7;
}
message UserIdRequest {
  int64 id = 1;
}
message NameRequest {
  string name = 1;
}
message AuthenticationRequest {
  string username = 1;
  string password = 2;
}


/*
creation dto fields
    private String name;
    private String email;
    private String phone;
    private String address;
    private String password;
    private String role;
    private String licenseNumber;

userdata fields
  private String name;
  private String email;
  private String address;
  private String phone;
  private long id;
  private String role;
  private String licenseNumber;
 */