syntax = "proto3";

//if importing related proto files:
//import "other_service.proto";
import "repeatingMessageTypes.proto";

// Defining the Java package where the generated code will live
option java_package = "sep3.wayofmilk.grpc";
option java_multiple_files = true;
//c# namespace
option csharp_namespace = "Sep3.WayOfMilk.Grpc";


// The service T3 will implement and T2 will call
service CowService {
  rpc GetAllCows (Empty) returns (CowList);
  rpc AddCow (CowCreationRequest) returns (CowData);
  rpc UpdateCow (CowData) returns (CowData);
  rpc GetCowById (CowIdRequest) returns (CowData);
  rpc GetCowByRegNo (SentString) returns (CowData);
  rpc DeleteCow (CowIdRequest) returns (Empty);
  rpc UpdateCowsHealth (CowsHealthChangeRequest) returns (CowList);
}

// Message definitions
message CowList {
  repeated CowData cows = 1; // 'repeated' means a list
}
message CowCreationRequest {
  string regNo = 1;
  string birthDate = 2; // Using string for dates, and handling conversion (LocalDate <-> string) in the service layer
  int64 registeredByUserId = 3;

}

message CowData {
  int64 id = 1;         // Corresponds to 'long' in Java (int is int32, double is float)
  // 'optional' tells gRPC to generate 'has...()' methods in Java
  //necessary for null checks in Long, Boolean and LocalDate fields especially during updates
  optional string regNo = 2;
  // Using string for dates, and handling conversion (LocalDate <-> string) in the service layer
  // date format: "YYYY-MM-DD"
  optional string birthDate = 3;
  optional bool isHealthy = 4;
  optional int64 departmentId = 5; //TODO: consider whether it should be a translated string instead of an id
}

message CowIdRequest {
  int64 id = 1;
}


message CowsHealthChangeRequest {
  repeated int64 cowIds = 1;
  optional bool newHealthStatus = 2;
  int64 requestedByUserId = 3;
}